--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1>Product details </h1>
+<% @products.each do |product| %>
+<p><%= product.title %></p>
+<p><%= product.price %></p>
+<p><%= product.stock_quantity %></p>
+<%end%>
